code/tui/snapshots/fullscreen/pointer/fullscreen_selection_copied.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                            [Dashboard]  
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                               Copied 7 chars to clipboard  
  ────────────────────────────────────────────────────────  
  > copy me                                                 
  ─────────────────────────────────────── Automatic model   
  ⏸ Manual                                                  
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
