code/tui/snapshots/fullscreen/pointer/fullscreen_selection_copy_failed.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                            [Dashboard]  
                                                            
● clipboard unavailable                                     
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ────────────────────────────────────────────────────────  
  > copy me                                                 
  ─────────────────────────────────────── Automatic model   
  ⏸ Manual                                                  
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
