code/tui/snapshots/fullscreen/pointer/input_pointer_selection.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                                            [Dashboard]  
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
  ────────────────────────────────────────────────────────  
  > ab你 cd                                                  
  ─────────────────────────────────────── Automatic model   
  ⏸ Manual                                                  
        Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
