code/tui/snapshots/fullscreen/pointer/resized_completion_after_cancelled_selection.snap
---
source: code/tui/src/app/fullscreen/pointer_tests.rs
expression: text
---
  .                        [Dashboard]  
                                        
                                        
                                        
                                        
  ─────────────────────────────── 1/1   
  /quit                      quit Ash   
  ────────────────────────────────────  
  > /q                                  
  ─────────────────── Automatic model   
                                        
  ⏸ Manual
